src/main/java/com/example/citronix/web/errors/ChampUndefinedException.java
package com.example.citronix.web.errors;

public class ChampUndefinedException extends RuntimeException {
    public ChampUndefinedException(String message) {
        super(message);
    }
}
